# text-processor-microservice

./: .gitignore  Dockerfile  README.md  pyproject.toml
app/: api_gateway.py  config.py  logging_config.py  models.py  worker_service.py
k8s/: api-deployment.yaml  configmap.yaml  ingress.yaml  redis.yaml  worker-deployment.yaml
