[project]
name = "text-processor-microservice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "flake8>=7.3.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "redis>=7.1.0",
    "uvicorn>=0.38.0",
]
